# Deutsch

./: CMakeLists.txt  README.md  install.sh  main.cpp
Kompilieren/: kompilieren.cpp  kompilieren.hpp
Kompilieren/Berechnungen/Addition/: Addition.hpp
Kompilieren/Berechnungen/Division/: Division.cpp  Division.hpp
Kompilieren/Berechnungen/Multiplikation/: Multiplikation.cpp  Multiplikation.hpp
Kompilieren/Berechnungen/Subtraktion/: Subtraktion.cpp  Subtraktion.hpp
Kompilieren/Ein-Ausgabe/: Ein-Ausgabe.cpp  Ein-Ausgabe.hpp
Kompilieren/Kontrolle/: Abkuerzungen.txt  kontrolle.cpp  kontrolle.hpp
Kompilieren/Schleifen/: Schleifen.cpp  Schleifen.hpp
Kompilieren/Uebersetzen/: uebersetzen.cpp  uebersetzen.hpp
Kompilieren/Verzweigungen/: Verzweigungen.cpp  Verzweigungen.hpp
